Stop stats from wrapping when window is too small Wrapping mess up the interface a tiny bit

--- a/css/app.css
+++ b/css/app.css
@@ -223,6 +223,7 @@ menu {
 	display: block;
 	position: relative;
 	z-index: 2;
+	white-space: nowrap;
 }
 
 #heat_percentage {
